# tamu-cookbook

./: .gitignore  README.md  pyproject.toml
docs/fixtures/rdf/: simplest_image.ttl
docs/source/: conf.py  index.rst
docs/source/components/: 0000_about.rst  0000_file.rst  0000_file_types.rst  0001_fileset.rst  0001_object.rst  0002_proxy.rst  0003_range.rst  0004_work.rst  0005_collection.rst  9000_version.rst  9001_tombstone.rst  9999_extinct_or_omitted.rst
docs/source/contents/: 0001_preface.rst  0002_philosophy.rst  0003_oddities_in_existing.rst  0004_namespaces.rst  0005_decisions.rst
docs/source/recipes/: 0000_about.rst  0001_simplest_image.rst
