[tool.poetry]
name = "tamu-cookbook"
version = "0.1.0"
description = "Recipes for Work Types and Presentation with IIIF"
authors = ["Mark Baggett <markpbaggett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Sphinx = "^8.0.2"
furo = "^2024.8.6"
iiif-prezi3 = "^1.2.1"
tripoli = "^2.0.0"
rdflib = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
